--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-<header>
+<!-- adding header and identity to my portfolio  -->
+  <header>   
  <h1>Danielhe27 </h1>
- <p>This is what i can do</p> 
-</header>
 
-  
+ <nav>
+
+  <div class="links">
+      <a href="#About-me">About me</a>
+      <a href="#Work">Work</a>
+      <a href="#Contact-me">Contact me</a>
+      <a href="#Resume">Resume</a>
+  </div>
+      </nav>
+</header>  
   
 </body>
 </html>
