img with subtitle added and rounded

--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
   <header>   
  <h1>Danielhe27 </h1>
 
- <nav>
-
-  <div class="links">
+<nav>
+    <div class="links">
       <a href="#About-me">About me</a>
       <a href="#Work">Work</a>
       <a href="#Contact-me">Contact me</a>
       <a href="#Resume">Resume</a>
-  </div>
-      </nav>
+    </div>
+</nav>
 </header>  
-  
+      <div class="hero"></div>
+      <h6>"amazing things can happen when you think big"</h6>
+<section>
+
+</section>
 </body>
 </html>
