decoration and about me section has been created

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <nav>
     <div class="links">
-      <a href="#About-me">About me</a>
+      <a href="#About me">About me</a>
       <a href="#Work">Work</a>
-      <a href="#Contact-me">Contact me</a>
+      <a href="#Contact me">Contact me</a>
       <a href="#Resume">Resume</a>
     </div>
 </nav>
@@ -24,7 +24,14 @@
       <div class="hero"></div>
       <h6>"amazing things can happen when you think big"</h6>
 <section>
-
+  <aside>
+  <article id="#About-me">
+    <h2>About me</h2>
+    <p>
+      A 28-year-old Venezuelan, halfway through an economics career, diving headfirst into the world of coding. Passionate about learning new skills and exploring the realms of technology, they're embracing coding with enthusiasm and determination.
+    </p>    
+  </article>
+</side>
 </section>
 </body>
 </html>
