last modification on my application

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
 
+  <!-- start with header with my username in github as identification -->
 <header>   
  <h1>Danielhe27 </h1>
-
+<!-- then i proceed to integrate links to sections in below -->
 <nav>
   <ul>
       <li><a href="#About-me">About Me</a></li>
@@ -21,15 +22,19 @@
 </ul>
 </nav>
 </header>  
+<!-- i add a class hero and picture as a decoration that i took with my camera and a message -->
 <div class="hero">
   <img src="../my-portfolio-wk/assets/images/sunrise.jpg" alt="sunrise" style="width:100%;">
         <div class="text-container">
           <h3>"amazing things can happen when you think big"</h3>
         </div>
 </div>
+<!-- i create a section with articles and  also an small resume about myself -->
 <section>
   <article class="About-Me">
-    <p>A 28-year-old Venezuelan, halfway through an economics career, diving headfirst into the world of coding. Passionate about learning new skills and exploring the realms of technology, they're embracing coding with enthusiasm and determination.</p>
+    <p>Originating from Venezuela, I arrived two years ago with an insatiable drive to learn and a bare-bones grasp of the English language, which I've since cultivated into a proficient level through relentless dedication. My journey stems from a deep passion for economics, self-taught and fueled by an unwavering fascination with global markets. 
+    Transitioning into the realm of sales, I cultivated essential communication skills and mastered the art of negotiation. As I ventured into managerial roles, I discovered an innate leadership ability, emphasizing a fusion of discipline and innovative strategies. Beyond the professional sphere, I prioritize fitness, dedicating myself to workouts and running for a balanced lifestyle.
+    From my earliest memories, I've been engrossed in unraveling the inner workings of computers and the complexities of operating systems like Windows and Mac. Currently embarking on a new season as a coding student, I aim to replicate the same passion and dedication that propelled my language learning journey into mastering the world of coding.</p>
   </article>
 </section>
   <article class="Work">
@@ -40,7 +45,7 @@
   <article class="Contact-me">
     <p></p>
   </article>
-
+<!-- main element and integration of id's linked with the sections on the top where also i add links so when you click you'll be re-directed to the proper website with names as a short description about where you going -->
 </main>
 
   <aside>
@@ -51,22 +56,25 @@
     <section id="Work">
       <h2>Work</h2>
       <div class="square-container">
-        <a href="https://github.com/dashboard" class="botom">Github</a>
-        <a href="https://github.com/danielhe27/my-portfolio-wk.git" class="left-side">Portfolio</a>
-        <a href="https://www.google.com" class="right-side">Google</a>
-        <a href="#" class="square">4</a>
+        <a href="https://danielhe27.github.io/func-acc-SEO/#social-media-marketing" class="Top">challenge</a>
+        <a href="https://github.com/danielhe27/my-portfolio-wk.git" class="Top-right">Portfolio</a>
+        <a href="https://www.google.com" class="Top-left">Google</a>
     </div>
     </section>
-    <section id="Resume">
-        <h2>Resume</h>
-      </section>
-    
+   
+    <!-- added a few resources about how to contact me, phone number, link to my first application and a link of my website in github where there are all my job -->
     
       <section id="Contact-me">
         <h2>Contact Me</h2>
       </section>
 </aside>
-
+<footer>
+  <div class="contact-info">
+    <p>Phone: +1-347.837.1763</p>
+    <p>Website: <a href="file:///Users/herrera/project/func-acc-SEO/index.html">file:///Users/herrera/project/func-acc-SEO/index.html</a></p>
+    <p>GitHub: <a href="https://github.com/danielhe27">https://github.com/danielhe27</a></p>
+  </div>
+</footer>
 
 </body>
 </html>
